# bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.polling.yml  docker-compose.remote.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_user_morning_reminder_settings.py  003_add_custom_reminder.py  004_add_user_onboarding_flags.py  005_add_day_of_month_to_custom_reminder.py
docs/: DEPLOYMENT_UBUNTU_WEBHOOK.md  DEPLOY_SHARED_SERVER.md  DOMAIN_SETUP.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: CreatePlan.vue  History.vue  Stats.vue  (+4 more)
scripts/: check-ports.sh  telegram-webhook-update.service  update-webhook.sh
src/: __init__.py  config.py  main.py  run_polling.py
src/api/: __init__.py  auth.py  webapp.py
src/bot/: keyboards.py  middlewares.py  states.py  text.py  user_flow.py
src/db/: __init__.py  models.py  session.py
src/logic/: plan_parser.py
src/scheduler/: __init__.py  celery_app.py  custom_reminders_dispatch.py  fsm_helper.py  tasks.py
src/services/: evening.py  notifications.py  plan.py  reminders.py  stats.py  user.py
static/: webapp.js
telegram_planning_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: timezone-detector.html  webapp.html
tests/: conftest.py
tests/integration/: test_webhook_flow.py
tests/unit/: test_plan_parser.py  test_scheduler_morning_reminders.py  test_start_settings_parsing.py  test_webapp_auth.py
(+12 files in other folders)
